SETUP all remaining tools